// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FraudLoginPage should match snapshot when session is expired 1`] = `
<div>
  <div
    class="large-container fr-m-auto fr-px-2w fr-mt-8w text-center"
    id="page-container"
  >
    <div
      data-mockid="AlertComponent"
    >
      <div>
        AlertComponent
      </div>
      <div>
        <p>
          Votre session a expiré, veuillez vous reconnecter
        </p>
      </div>
    </div>
    <h1
      class="fr-text-title--blue-france fr-mb-5w"
    >
      Pour signaler un cas d’usurpation d’identité, veuillez vous connecter
    </h1>
    <div
      data-mockid="LoginFormComponent"
    />
    <p
      class="paragraph fr-mx-auto fr-mt-7v fr-mb-3w"
      data-testid="paragraph"
    >
      Une fois connecté, vous pourrez contacter le support FranceConnect en remplissant un formulaire.
    </p>
    <span
      data-mockid="LinkComponent"
    >
      Je ne peux pas me connecter
    </span>
  </div>
</div>
`;

exports[`FraudLoginPage should match the snapshot on desktop layout 1`] = `
<div>
  <div
    class="large-container fr-m-auto fr-px-2w fr-mt-8w text-center"
    id="page-container"
  >
    <h1
      class="fr-text-title--blue-france fr-mb-5w"
    >
      Pour signaler un cas d’usurpation d’identité, veuillez vous connecter
    </h1>
    <div
      data-mockid="LoginFormComponent"
    />
    <p
      class="paragraph fr-mx-auto fr-mt-7v fr-mb-3w"
      data-testid="paragraph"
    >
      Une fois connecté, vous pourrez contacter le support FranceConnect en remplissant un formulaire.
    </p>
    <span
      data-mockid="LinkComponent"
    >
      Je ne peux pas me connecter
    </span>
  </div>
</div>
`;

exports[`FraudLoginPage should match the snapshot on mobile layout 1`] = `
<div>
  <div
    class="large-container fr-m-auto fr-px-2w fr-mt-5w text-left"
    id="page-container"
  >
    <h1
      class="fr-text-title--blue-france fr-mb-5w"
    >
      Pour signaler un cas d’usurpation d’identité, veuillez vous connecter
    </h1>
    <div
      data-mockid="LoginFormComponent"
    />
    <p
      class="paragraph fr-mx-auto fr-mt-7v fr-mb-3w"
      data-testid="paragraph"
    >
      Une fois connecté, vous pourrez contacter le support FranceConnect en remplissant un formulaire.
    </p>
    <span
      data-mockid="LinkComponent"
    >
      Je ne peux pas me connecter
    </span>
  </div>
</div>
`;

exports[`FraudLoginPage should match the snapshot on tablet layout 1`] = `
<div>
  <div
    class="large-container fr-m-auto fr-px-2w fr-mt-5w text-center"
    id="page-container"
  >
    <h1
      class="fr-text-title--blue-france fr-mb-5w"
    >
      Pour signaler un cas d’usurpation d’identité, veuillez vous connecter
    </h1>
    <div
      data-mockid="LoginFormComponent"
    />
    <p
      class="paragraph fr-mx-auto fr-mt-7v fr-mb-3w"
      data-testid="paragraph"
    >
      Une fois connecté, vous pourrez contacter le support FranceConnect en remplissant un formulaire.
    </p>
    <span
      data-mockid="LinkComponent"
    >
      Je ne peux pas me connecter
    </span>
  </div>
</div>
`;

exports[`FraudLoginPage should match the snapshot when session is not expired 1`] = `
<div>
  <div
    class="large-container fr-m-auto fr-px-2w fr-mt-8w text-center"
    id="page-container"
  >
    <h1
      class="fr-text-title--blue-france fr-mb-5w"
    >
      Pour signaler un cas d’usurpation d’identité, veuillez vous connecter
    </h1>
    <div
      data-mockid="LoginFormComponent"
    />
    <p
      class="paragraph fr-mx-auto fr-mt-7v fr-mb-3w"
      data-testid="paragraph"
    >
      Une fois connecté, vous pourrez contacter le support FranceConnect en remplissant un formulaire.
    </p>
    <span
      data-mockid="LinkComponent"
    >
      Je ne peux pas me connecter
    </span>
  </div>
</div>
`;

exports[`FraudLoginPage should render AlertComponent with specific props if session has expired 1`] = `
<div>
  <div
    class="large-container fr-m-auto fr-px-2w fr-mt-8w text-center"
    id="page-container"
  >
    <div
      data-testid="AlertComponent"
    >
      <p>
        Votre session a expiré, veuillez vous reconnecter
      </p>
    </div>
    <h1
      class="fr-text-title--blue-france fr-mb-5w"
    >
      Pour signaler un cas d’usurpation d’identité, veuillez vous connecter
    </h1>
    <div
      data-mockid="LoginFormComponent"
    />
    <p
      class="paragraph fr-mx-auto fr-mt-7v fr-mb-3w"
      data-testid="paragraph"
    >
      Une fois connecté, vous pourrez contacter le support FranceConnect en remplissant un formulaire.
    </p>
    <span
      data-mockid="LinkComponent"
    >
      Je ne peux pas me connecter
    </span>
  </div>
</div>
`;
